// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterRadioGroup - Snapshots > matches snapshot with default props 1`] = `
<div
  class="w-full flex-col flex m-0 min-w-0 gap-2 bg-background p-0"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="m-0 gap-2 p-0"
    data-slot="filter-header"
    data-testid="filter-header"
    id="radix-normalized"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Test Filter
    </h2>
  </div>
  <div
    aria-labelledby="radix-normalized"
    class=""
    data-testid="filter-test filter-radiogroup"
    role="radiogroup"
  >
    <div
      class="mx-auto w-full flex-col flex"
      data-slot="filter-list"
      data-testid="filter-list"
    >
      <button
        aria-checked="true"
        aria-label="Option 1"
        aria-pressed="true"
        class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-foreground m-0 h-full px-0 py-1"
        data-selected="true"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="0"
        type="button"
      >
        <svg
          data-testid="mock-icon-1"
        />
        <span
          class=""
        >
          Option 1
        </span>
      </button>
      <button
        aria-checked="false"
        aria-label="Option 2"
        aria-pressed="false"
        class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <svg
          data-testid="mock-icon-2"
        />
        <span
          class=""
        >
          Option 2
        </span>
      </button>
      <button
        aria-checked="false"
        aria-label="Option 3"
        aria-pressed="false"
        class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <svg
          data-testid="mock-icon-3"
        />
        <span
          class=""
        >
          Option 3
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`FilterRadioGroup - Snapshots > matches snapshot with default value 1`] = `
<div
  class="w-full flex-col flex m-0 min-w-0 gap-2 bg-background p-0"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="m-0 gap-2 p-0"
    data-slot="filter-header"
    data-testid="filter-header"
    id="radix-normalized"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Test Filter
    </h2>
  </div>
  <div
    aria-labelledby="radix-normalized"
    class=""
    data-testid="filter-test filter-radiogroup"
    role="radiogroup"
  >
    <div
      class="mx-auto w-full flex-col flex"
      data-slot="filter-list"
      data-testid="filter-list"
    >
      <button
        aria-checked="true"
        aria-label="Option 1"
        aria-pressed="true"
        class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-foreground m-0 h-full px-0 py-1"
        data-selected="true"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="0"
        type="button"
      >
        <svg
          data-testid="mock-icon-1"
        />
        <span
          class=""
        >
          Option 1
        </span>
      </button>
      <button
        aria-checked="false"
        aria-label="Option 2"
        aria-pressed="false"
        class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <svg
          data-testid="mock-icon-2"
        />
        <span
          class=""
        >
          Option 2
        </span>
      </button>
      <button
        aria-checked="false"
        aria-label="Option 3"
        aria-pressed="false"
        class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <svg
          data-testid="mock-icon-3"
        />
        <span
          class=""
        >
          Option 3
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`FilterRadioGroup - Snapshots > matches snapshot with disabled item 1`] = `
<div
  class="w-full flex-col flex m-0 min-w-0 gap-2 bg-background p-0"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="m-0 gap-2 p-0"
    data-slot="filter-header"
    data-testid="filter-header"
    id="radix-normalized"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Test Filter
    </h2>
  </div>
  <div
    aria-labelledby="radix-normalized"
    class=""
    data-testid="filter-test filter-radiogroup"
    role="radiogroup"
  >
    <div
      class="mx-auto w-full flex-col flex"
      data-slot="filter-list"
      data-testid="filter-list"
    >
      <button
        aria-checked="true"
        aria-label="Option 1"
        aria-pressed="true"
        class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-foreground m-0 h-full px-0 py-1"
        data-selected="true"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="0"
        type="button"
      >
        <svg
          data-testid="mock-icon-1"
        />
        <span
          class=""
        >
          Option 1
        </span>
      </button>
      <button
        aria-checked="false"
        aria-disabled="true"
        aria-label="Option 2"
        aria-pressed="false"
        class="flex gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1 cursor-default opacity-40"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <svg
          data-testid="mock-icon-2"
        />
        <span
          class=""
        >
          Option 2
        </span>
      </button>
      <button
        aria-checked="false"
        aria-label="Option 3"
        aria-pressed="false"
        class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <svg
          data-testid="mock-icon-3"
        />
        <span
          class=""
        >
          Option 3
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`FilterRadioGroup - Snapshots > matches snapshot with selected value 1`] = `
<div
  class="w-full flex-col flex m-0 min-w-0 gap-2 bg-background p-0"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="m-0 gap-2 p-0"
    data-slot="filter-header"
    data-testid="filter-header"
    id="radix-normalized"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Test Filter
    </h2>
  </div>
  <div
    aria-labelledby="radix-normalized"
    class=""
    data-testid="filter-test filter-radiogroup"
    role="radiogroup"
  >
    <div
      class="mx-auto w-full flex-col flex"
      data-slot="filter-list"
      data-testid="filter-list"
    >
      <button
        aria-checked="false"
        aria-label="Option 1"
        aria-pressed="false"
        class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <svg
          data-testid="mock-icon-1"
        />
        <span
          class=""
        >
          Option 1
        </span>
      </button>
      <button
        aria-checked="true"
        aria-label="Option 2"
        aria-pressed="true"
        class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-foreground m-0 h-full px-0 py-1"
        data-selected="true"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="0"
        type="button"
      >
        <svg
          data-testid="mock-icon-2"
        />
        <span
          class=""
        >
          Option 2
        </span>
      </button>
      <button
        aria-checked="false"
        aria-label="Option 3"
        aria-pressed="false"
        class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <svg
          data-testid="mock-icon-3"
        />
        <span
          class=""
        >
          Option 3
        </span>
      </button>
    </div>
  </div>
</div>
`;
